# xlcli-ai

./: README.md  pyproject.toml  requirements.txt  sales.xlsx
xlcli/: ai_query.py  cli.py  main.py  query_engine.py  sample_data.py
