[project]
name = "xlcli-ai"
version = "1.0.0"
description = "AI-powered CLI for querying Excel files using natural language"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name="Ammar Kaskar" }
]

dependencies = [
  "pandas",
  "tabulate",
  "click",
  "groq",
  "openpyxl",
  "python-dotenv"
]

[project.scripts]
xlcli = "xlcli.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"